erDiagram
    USER {
        uuid id PK
        string name
        string email
        string role
    }
    DOCTOR {
        uuid id PK
        string specialty
        string license_number
        string user_id FK
    }
    PATIENT {
        uuid id PK
        string insurance
        string user_id FK
    }
    APPOINTMENT {
        uuid id PK
        datetime time
        uuid patient_id FK
        uuid doctor_id FK
        string status
    }
    AVAILABILITY {
        uuid id PK
        uuid doctor_id FK
        string day_of_week
        time start_time
        time end_time
    }
    TIMEOFF {
        uuid id PK
        uuid doctor_id FK
        date start_date
        date end_date
        string reason
    }
    MEDICAL_RECORD {
        uuid id PK
        uuid appointment_id FK
        uuid patient_id FK
        string doctor_id FK
        string notes
        datetime created_at
    }
    AUDIT_LOG {
        uuid id PK
        string user_id FK
        string action
        datetime timestamp
    }
    USER ||--|| DOCTOR : "is a"
    USER ||--|| PATIENT : "is a"
    DOCTOR ||--o{ AVAILABILITY : "sets"
    DOCTOR ||--o{ TIMEOFF : "requests"
    PATIENT ||--o{ APPOINTMENT : "schedules"
    DOCTOR ||--o{ APPOINTMENT : "accepts"
    PATIENT ||--o{ MEDICAL_RECORD : "has"
    DOCTOR ||--o{ MEDICAL_RECORD : "writes"
    USER ||--o{ AUDIT_LOG : "logs"